--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
 	  AC_INIT([fwts],[0.1],[fwts-devel@lists.ubuntu.com])
-          AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])
+          AM_INIT_AUTOMAKE([-Wall foreign subdir-objects])
           m4_ifdef([AM_PROG_AR], [AM_PROG_AR])
 	  AC_CANONICAL_HOST
 	  AC_CONFIG_MACRO_DIR([m4])
